--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,11 +7,12 @@
     <ion-buttons slot="end" class="tools">
         <a href="#" class="hints tasks"><span>10</span></a>
         <a href="#" class="hints alerts"><span>10</span></a>
+        <a href="#" class="user">alessandro.tamborini@readvice.it</a>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="body">
     <div class="left-menu left-side-element">
         <div class="base">
             <ul>
@@ -27,8 +28,11 @@
             <div class="tool-table">
                 <div class="tool-row">
                     <div class="tool">
-                        filtra per: <input type="text"><input type="text"><a href="#" class="button submit">&nbsp;</a><a href="#" style="float: right" class="button">cliente</a>
-
+                        <span>filtra per:</span>
+                        <input type="text" placeholder="nome">
+                        <input type="text" placeholder="C.F.">
+                        <a href="#" class="button search">&nbsp;</a>
+                        <a href="#" style="float: right" class="button add">cliente</a>
                     </div>    
                 </div>
             </div>
@@ -40,9 +44,9 @@
                         <div class="cliente-table">
                             <div class="cliente-row">
                                 <div class="item immobili"><span class="badge">4</span></div>
-                                <div class="item bv"><span class="bv_label">Book Value (&euro;)</span><span class="bv_value">450K</span><a href="#" class="button eye">dettagli</a></div>
+                                <div class="item bv"><span class="bv_label">Book Value (&euro;)</span><span class="bv_value">450K</span><a href="#" class="button view only-icon">&nbsp;</a></div>
                                 <div class="item anagrafica"><span class="nome">Paolo Rossi</span><span class="cf">PLARSS80A01L219Q</span><span class="email">paolo.rossi@domain.it</span></div>
-                                <div class="item tools"><a href="#" class="button">Modifica</a><br><a href="#" class="button">Report</a></div>
+                                <div class="item tools"><a href="#" class="button edit">Modifica</a><br><a href="#" class="button report">Report</a></div>
                             </div>
                         </div>
                         <div class="status red"></div>
@@ -62,7 +66,94 @@
                         </div>
                         <div class="status red"></div>
                     </li>
-                    
+                    <li class="cliente selected">
+                        <div class="cliente-table">
+                            <div class="cliente-row">
+                                <div class="item immobili"><span class="badge">4</span></div>
+                                <div class="item bv"><span class="bv_value">450K</span><span class="bv_label">Book Value (&euro;)</span></div>
+                                <div class="item anagrafica"><span class="nome">Paolo Rossi</span><span class="cf">PLARSS80A01L219Q</span></div>
+                                <div class="item date"><span class="date">20/06/2019</span></div>
+                            </div>
+                        </div>
+                        <div class="status green"></div>
+                    </li>
+                    <li class="cliente">
+                        <div class="cliente-table">
+                            <div class="cliente-row">
+                                <div class="item immobili"><span class="badge">4</span></div>
+                                <div class="item bv"><span class="bv_value">450K</span><span class="bv_label">Book Value (&euro;)</span></div>
+                                <div class="item anagrafica"><span class="nome">Paolo Rossi</span><span class="cf">PLARSS80A01L219Q</span></div>
+                                <div class="item date"><span class="date">20/06/2019</span></div>
+                            </div>
+                        </div>
+                        <div class="status green"></div>
+                    </li>
+                    <li class="cliente">
+                        <div class="cliente-table">
+                            <div class="cliente-row">
+                                <div class="item immobili"><span class="badge">4</span></div>
+                                <div class="item bv"><span class="bv_value">450K</span><span class="bv_label">Book Value (&euro;)</span></div>
+                                <div class="item anagrafica"><span class="nome">Paolo Rossi</span><span class="cf">PLARSS80A01L219Q</span></div>
+                                <div class="item date"><span class="date">20/06/2019</span></div>
+                            </div>
+                        </div>
+                        <div class="status red"></div>
+                    </li>
+                    <li class="cliente">
+                        <div class="cliente-table">
+                            <div class="cliente-row">
+                                <div class="item immobili"><span class="badge">4</span></div>
+                                <div class="item bv"><span class="bv_value">450K</span><span class="bv_label">Book Value (&euro;)</span></div>
+                                <div class="item anagrafica"><span class="nome">Paolo Rossi</span><span class="cf">PLARSS80A01L219Q</span></div>
+                                <div class="item date"><span class="date">20/06/2019</span></div>
+                            </div>
+                        </div>
+                        <div class="status"></div>
+                    </li>
+                    <li class="cliente">
+                        <div class="cliente-table">
+                            <div class="cliente-row">
+                                <div class="item immobili"><span class="badge">4</span></div>
+                                <div class="item bv"><span class="bv_value">450K</span><span class="bv_label">Book Value (&euro;)</span></div>
+                                <div class="item anagrafica"><span class="nome">Paolo Rossi</span><span class="cf">PLARSS80A01L219Q</span></div>
+                                <div class="item date"><span class="date">20/06/2019</span></div>
+                            </div>
+                        </div>
+                        <div class="status green"></div>
+                    </li>
+                    <li class="cliente">
+                        <div class="cliente-table">
+                            <div class="cliente-row">
+                                <div class="item immobili"><span class="badge">4</span></div>
+                                <div class="item bv"><span class="bv_value">450K</span><span class="bv_label">Book Value (&euro;)</span></div>
+                                <div class="item anagrafica"><span class="nome">Paolo Rossi</span><span class="cf">PLARSS80A01L219Q</span></div>
+                                <div class="item date"><span class="date">20/06/2019</span></div>
+                            </div>
+                        </div>
+                        <div class="status orange"></div>
+                    </li>
+                    <li class="cliente">
+                        <div class="cliente-table">
+                            <div class="cliente-row">
+                                <div class="item immobili"><span class="badge">4</span></div>
+                                <div class="item bv"><span class="bv_value">450K</span><span class="bv_label">Book Value (&euro;)</span></div>
+                                <div class="item anagrafica"><span class="nome">Paolo Rossi</span><span class="cf">PLARSS80A01L219Q</span></div>
+                                <div class="item date"><span class="date">20/06/2019</span></div>
+                            </div>
+                        </div>
+                        <div class="status red"></div>
+                    </li>
+                    <li class="cliente">
+                        <div class="cliente-table">
+                            <div class="cliente-row">
+                                <div class="item immobili"><span class="badge">4</span></div>
+                                <div class="item bv"><span class="bv_value">450K</span><span class="bv_label">Book Value (&euro;)</span></div>
+                                <div class="item anagrafica"><span class="nome">Paolo Rossi</span><span class="cf">PLARSS80A01L219Q</span></div>
+                                <div class="item date"><span class="date">20/06/2019</span></div>
+                            </div>
+                        </div>
+                        <div class="status green"></div>
+                    </li>
                 </ul>
             </div>
 
@@ -83,7 +174,119 @@
                     <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
                     <div class="tipologia table">
                         <div class="row">
-                            <div class="cell casa">
+                            <div class="cell abitazione">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="quota table">
+                        <div class="row">
+                            <div class="cell">
+                                27<small>%</small>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="immobile">
+                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
+                    <div class="tipologia table">
+                        <div class="row">
+                            <div class="cell commerciale">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="quota table">
+                        <div class="row">
+                            <div class="cell">
+                                27<small>%</small>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="immobile">
+                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
+                    <div class="tipologia table">
+                        <div class="row">
+                            <div class="cell parcheggio">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="quota table">
+                        <div class="row">
+                            <div class="cell">
+                                27<small>%</small>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="immobile">
+                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
+                    <div class="tipologia table">
+                        <div class="row">
+                            <div class="cell magazzino">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="quota table">
+                        <div class="row">
+                            <div class="cell">
+                                27<small>%</small>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="immobile">
+                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
+                    <div class="tipologia table">
+                        <div class="row">
+                            <div class="cell abitazione">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="quota table">
+                        <div class="row">
+                            <div class="cell">
+                                27<small>%</small>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="immobile">
+                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
+                    <div class="tipologia table">
+                        <div class="row">
+                            <div class="cell commerciale">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="quota table">
+                        <div class="row">
+                            <div class="cell">
+                                27<small>%</small>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="immobile">
+                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
+                    <div class="tipologia table">
+                        <div class="row">
+                            <div class="cell parcheggio">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="quota table">
+                        <div class="row">
+                            <div class="cell">
+                                27<small>%</small>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="immobile">
+                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
+                    <div class="tipologia table">
+                        <div class="row">
+                            <div class="cell magazzino">
                             </div>
                         </div>
                     </div>
@@ -100,7 +303,7 @@
         <div class="footer table">
             <div class="row">
                 <div class="cell">
-                    <a hef="#" class="button">immobile</a>
+                    <a hef="#" class="button add">immobile</a>
                 </div>
             </div>
         </div>
