--- a/src/app/pages/wizard/wizard.page.html
+++ b/src/app/pages/wizard/wizard.page.html
@@ -70,6 +70,7 @@
                                             <select class="select-css"
                                                 (change)="selezionaCategoriaCatastale($event.target)">
                                                 <option *ngFor="let cat of categorieCatastali" [ngValue]="cat.codice"
+                                                    value="{{cat.codice}}"
                                                     [attr.selected]="cat.codice+'' === immobile.tipologie_catastali_id+'' ? 'selected' : null">
                                                     {{cat.descrizione}}
                                                 </option>
@@ -79,6 +80,7 @@
                                             <label>Zone OMI</label>
                                             <select class="select-css" (change)="selezionaOmi($event.target)">
                                                 <option *ngFor="let omi of tipiOmi" [ngValue]="omi.codice"
+                                                    value="{{omi.codice}}"
                                                     [attr.selected]="omi.codice+'' === immobile.comune_zone_cod+'' ? 'selected' : null">
                                                     {{omi.descrizione}}
                                                 </option>
@@ -205,7 +207,7 @@
                                                     <span class="slider round"></span>
                                                 </label>
                                             </div>
-                                            <div class="form-item ">
+                                            <div class="form-item left">
                                                 <label>Tasso</label><br>
                                                 <label class="container">Fisso
                                                     <input type="radio"
@@ -222,7 +224,7 @@
                                                     <span class="checkmark"></span>
                                                 </label>
                                             </div>
-                                            <div class="form-item single"
+                                            <div class="form-item right"
                                                 *ngIf="immobile.mutuo_dettaglio.tipo_tasso == 'F'">
                                                 <label>Tasso</label>
                                                 <div class="type">
